- initial commit
- PIP-45 Dodano moduły REST i gadget to szkieletu aplikacji.
- PIP-45 Dodano brakujące pliki lokalizacji.
- PIP-45 Poprawiono pliki lokalizacji.
- Fix pom.xml, teraz projekt się uruchamia
- PIP-46 Poprawiono pliki lokalizacji oraz gadget.xml
- PIP-46 Refactoring nazwy katalogu
- PIP-47 dodanie pierwszych elementów gui
- PIP-49 Dodano dwie metody zasobu rest oraz wyświetlanie rezultatu zapytania w GUI
- PIP-49 Refactoring + naprawa błędu z dwoma listami wszystkich Issue.
- PIP-49 Refactoring.
- PIP-49 Refactoring,logowanie z slf4j, wyświetlanie komunikatu błędy w przypadku błednego parametru usługi REST
- PIP-58 Przeniesiono javascriptową część gadgetu do zewnętrznego pliku
- PIP-58 Dodano obsługę wyjątków javascript oraz poprawiono linki do pobranych issue w GUI
- PIP-64 PIP-65 Naprawiono zapisywanie ustawień, dodano zasób walidujący konfigurację
- PIP-65 Refactoring
- PIP-66 Zmieniono pole project
- PIP-87 Dodano pola Daty oraz Wersji + małe poprawki w bundle
- PIP-87 Dodanie pliku calendar.css
- PIP-49 Naprawione błąd powodujący NPE
- PIP-99 Poprawienie tytułu i dodanie opisu dla pola
- PIP-100 Dodanie walidacji na połączone pole Data i Poprzednie dni + usunięcie linku do nikąd z tytułu gadżetu
- PIP-63 Utworzono serwis wyszukujący
- PIP-75 Utworzono pole multiselect zawierające statusy
- PIP-102 Refaktoring + usunięcie zbędnych zasobów REST
- PIP-97 Dodano brakujące pola oraz odpowiednie modyfikacje backendu, min. REST pozwalający na testowanie usługi wyszukiwania
- PIP-97 Drobna poprawka